welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:43: error: reassignment to val
				i = i + 1
                                  ^SnakeBuggle:49: error: reassignment to val
					i = i + 1
                                          ^